<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startseite_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartseiteFragment">

    <TextView
        android:id="@+id/startseite_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/startseite_heading"
        android:textColor="@android:color/black"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/button_rezepteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/button_rezepteList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startseite_heading"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/button_kategorienList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/button_kategorienList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startseite_heading"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/button_randomRezept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_randomRezept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_kategorienList"
        app:layout_constraintStart_toEndOf="@+id/button_rezepteList"
        app:layout_constraintTop_toBottomOf="@+id/startseite_heading"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/button_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/button_tutorial"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>